--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,6 @@
 twig:
-    default_path: '%kernel.project_dir%/templates'
+    paths: ['%kernel.project_dir%/src/Views']
+    #default_path: '%kernel.project_dir%/templates'
 
 when@test:
     twig:
